frontend/src/components/post/Post.module.css
.container{
    max-width: 800px;
    background-color: #fff;
    border-radius: 8px;
    margin:22px;
    padding:12px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 8px;
    font-family: 'Montserrat', sans-serif;

}

.postContainer{
    display:flex;
}
.postHeader {
    display: flex;

}
.postHeader img{
    border-radius: 50%;
    width:100%;
    background-color: #000;
}
.postHeader h1{
    color: #286ABA;
    margin:0;
    padding:0;
    font-size: 1.4rem;
}
.postHeader p{
    font-size: 0.8rem;
    margin: 0;
    color: #666;
}
.avatar{
    width:60px;
    padding: 0 12px 12px 0;
}
.container article{
    padding-bottom: 22px;
}
.postFooter{
    display: flex;
    justify-content: space-between;
    font-size: 0.8rem;
    border-top: solid 1px #ddd;
    padding-top: 12px;
}
.postFooter img{
    width: 100%;
}
.like{
    cursor: pointer;
    transform:rotate(180deg);
    width:28px;
}

.unlike{
    cursor: pointer;
    transform:none;
    width:28px;
}
.likesNumber{
    display: flex;
    width: 32px;
}
.likesNumber img{
    width: 100%;
}
.likesNumber div{
color: rgb(99, 37, 37);
font-size: 0.8rem;
font-weight: bold;
}

